# MotionPlanningProjects

./: .gitignore  Git Commands to update.txt  README.md
FinalProject/: DockerCommands.txt
FinalProject/code/: CCRRT.cpp  CMakeLists.txt  DockerCommands.txt  MotionValidator.cpp  MotionValidator.h  Obstacles.h  RG-RRT.cpp  RG-RRT.h  obstacles.txt  visualize_path.py
Project0/: Docker Commands.txt  result_demo2.ppm  result_demo_default.ppm
Project0/code/: CMakeLists.txt  Point2DPlanning.cpp  ppmfilemaker.py
Project0/code/ppm/: Testing_Map.ppm  test.ppm  testing.ppm
Project1/: Docker command.txt
Project1/code/: DiskSampler.cpp
Project2/: Docker commands.txt  tryingAstar.py
Project2/code/: CMakeLists.txt  CollisionChecking.cpp  Docker commands.txt  KinematicChainBenchmark.cpp  PlanningRTP.cpp  RRT.cpp  RRT.py  RTP.cpp  RTP.h  RigidBodyPlanning.cpp  example_obstacles.txt  mydatabase.db
Project3/: New Text Document.txt
Project3/code/: Dockercommands.txt  clear.txt  codebackupthatworks.cpp  narrow.txt  path1.txt  path2.txt  path_c.txt  plan.cpp  planscenario1.cpp  visualise.py
Project3/code2/: CMakeLists.txt  DockerCommands.txt  KinematicChain.h  backupcpp.txt  environment_1.txt  path1.txt  path2.txt  plan.cpp  visualise.py
Project4/: CMakeLists.txt  car.cpp  pendulum.cpp
Project4/code/: CMakeLists.txt  CollisionChecking.cpp  CollisionChecking.h  DockerCommands.txt  RRT.cpp  RRT.h  car.cpp  car_path.txt  obstacles.txt.txt  pendulum.cpp  pendulum_path.txt  visualize_path.py
